--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="cursor: none;">
+<html lang="en" class="cursor-auto hide-cursor:cursor-none">
 
 <head>
   <meta charset="UTF-8" />
